<resources>
    <string name="app_name">Shoppd</string>
    <string name="dbName">delivxdb</string>
    <string name="domain">delivx.page.link</string>
    <string name="IosAppStoreIdForShare">1315028442</string>
    <string name="IosAppVersiion">1315028442</string>
    <string name="IosAppName">com.</string>
    <string name="host">delivx_intent_return</string>
    <string name="scheme">delivx</string>
    <string name="google_key">AIzaSyCusjWDpv1uiHIxptCojSLVBSJWTAJz9JA</string>
    <string name="content_descriptor">&#8230;&#8230;&#8230;</string>
    <string name="networkslow">Network Not Available or too slow please check</string>
    <string name="somethingWentWrong">Oops ! Something went wrong.Please try again</string>
    <string name="serverError">Internal server error</string>
    <string name="locationPermission">Please allow DelivX to access this device’s locationData</string>
    <string name="customer_">customer_</string>
    <string name="gettingLoc">Getting your current locationData</string>
    <string name="enableLoc">Enable Location Services</string>
    <string name="currentLoc">Current Location</string>
    <string name="notDelivery">Sorry, we don’t deliver to this locality</string>
    <string name="bad_quality">Bad quality</string>
    <string name="percentage">% \</string>
    <string name="ok">OK</string>
    <string name="gotIt">GOT IT</string>
    <string name="det_my_loc">DETECT MY LOCATION</string>
    <string name="set_location">Set locationData</string>
    <string name="manually"> manually</string>
    <string name="deliveryLocation">DELIVERY LOCATION</string>
    <string name="searchAddress">Search Address</string>
    <string name="guestLogin">guestLogin</string>
    <string name="userLogin">userLogin</string>
    <string name="openTime">Opens Today at</string>
    <string name="todayDeal">Today\'s Deals</string>
    <string name="openTimeTomorrow">Opens Tomorrow at</string>
    <string name="storeClose">Closed</string>
    <string name="login_small">Login</string>
    <string name="enter_phoneNumber">Enter your phone number to proceed</string>
    <string name="enterValidPhoneNumber">please enter valid phoneNumber</string>
    <string name="enterValidPassword">please enter valid password</string>
    <string name="phone_number_caps">PHONE NUMBER</string>
    <string name="default_notification_channel_id">1</string>
    <string name="alert">Alert</string>
    <string name="replace_cart">Replace cart item?</string>
    <string name="appSetting">App Setting</string>
    <string name="reGrantPermissionMsg">You have denied the required permission. Please, grant to proceed further."</string>
    <string name="sessionExp">Your session has expired, please login again</string>
    <string name="cartColor">Color:</string>
    <string name="cartMore">+More</string>
    <string name="repeatLastAddOn">Repeat last used customization ?</string>
    <string name="iLlChoose">I\'ll Choose</string>
    <string name="repeatLast">Repeat Last</string>
    <string name="viewAll">View All</string>
    <string name="addcart">Add To Cart</string>
    <string name="close">Close</string>
    <string name="addItem">Add Item</string>
    <string name="add">Add</string>
    <string name="selectedStore">Selected Store</string>
    <string name="allStore">All Stores</string>
    <string name="undergoingVerification">Your profile is undergoing verification</string>
    <string name="profileIncomplete">Your Profile is incomplete.</string>
    <string name="changeName">Change Name</string>
    <string name="changeMail">Change Email</string>
    <string name="changePhone">Change Phone</string>
    <string name="topBrand">Top Brands</string>
    <string name="dealEnds">Deal Ends in:</string>
    <string name="lowestPrice">Every day lowest price</string>
    <string name="noItemsInCart">No items in your cart</string>
    <string name="noItemsInHistory">No items in your History</string>
    <string name="noActiveOrders">No Active Orders</string>
    <string name="noPastOrders">No Past Orders</string>
    <string name="noDebits">No Debits</string>
    <string name="noCredits">No Credits</string>
    <string name="customisation">Customize</string>
    <string name="myProfile">My Profile</string>
    <string name="cartTotal">To Pay</string>
    <string name="deliveryType">Delivery type</string>
    <string name="selHowToGetOrder">Select how do want to get your order</string>
    <string name="pickUp">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="nowOrderDescription">Now orders are meant to place orders where the courier delivers your order ASAP </string>
    <string name="on">on</string>
    <string name="schedule">Schedule</string>
    <string name="scheduleOrderDesc">Scheduled orders are meant to place orders where the courier delivers your order at the selected delivery slot</string>
    <string name="yourPaymentBreakDown">Payment Breakdown </string>
    <string name="placeTheOrder">Place the order</string>
    <string name="subTotal">Sub Total</string>
    <string name="savings">Your Savings</string>
    <string name="tax">Taxes</string>
    <string name="history">History</string>
    <string name="activeorder">Active order</string>
    <string name="pastorder">Past order</string>
    <string name="help">Help</string>
    <string name="reorder">Reorder</string>
    <string name="details">Details</string>
    <string name="asap">ASAP</string>
    <string name="driverAtStore">Your order is ready!</string>
    <string name="cancelledByManager">Cancelled by manager</string>
    <string name="cancelledByCustomer">Cancelled by customer.</string>
    <string name="processingPayment">ProcessingPayment</string>
    <string name="rejectedByManager">Rejected by manager</string>
    <string name="acceptedByManager">Your Order has been accepted!</string>
    <string name="orderReady">Your Order is ready.</string>
    <string name="orderPicked">Order picked.</string>
    <string name="orderCompleted">Your Order is completed.</string>
    <string name="driverAccept">Your food is being prepared.</string>
    <string name="driverCancelled">Rejected by driver.</string>
    <string name="driverOnTheWay">Driver is Enroute to Store.</string>
    <string name="driverReached">Your order will soon be at your door step.</string>
    <string name="driverToCustomer">Enroute to Customer.\'</string>
    <string name="cancelledByDriver">Cancelled by driver.</string>
    <string name="orderDuetimeUpdated">Order due time updated.</string>
    <string name="centralDispatch">central dispatch.</string>
    <string name="orderExpired">Order expired.</string>
    <string name="orderUnassigned">Order Unassigned.</string>
    <string name="enterMsgHere">Type Message</string>
    <string name="helpSend">Send</string>
    <string name="bid">Bid</string>
    <string name="id">ID:</string>
    <string name="trendingProduct">Trending Products</string>
    <string name="milesaway">KM AWAY</string>
    <string name="rating">Rating</string>
    <string name="menu">Menu</string>
    <string name="thc">THC</string>
    <string name="cbd">CBD</string>
    <string name="item">item</string>
    <string name="allItems">Items</string>
    <string name="addNewItems">Add new items</string>
    <string name="deliveryCharge">Delivery Charge</string>
    <string name="store">store</string>
    <string name="off">OFF</string>
    <string name="quantityOrdered">0</string>
    <string name="freeDel">away from delivery from this store</string>
    <string name="fixedDel">fixed fee applicable</string>
    <string name="cart">Cart</string>
    <string name="passWordCaps">PASSWORD</string>
    <string name="forgetPassword">Forgot password ?</string>
    <string name="createanAccountWithNew">Create a new</string>
    <string name="account">account</string>
    <string name="iHaveReferalCode">I have a refferal code</string>
    <string name="rulesOfApp">By creating this account, you agree to our </string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="emailAddress">EMAIL ADDRESS</string>
    <string name="referalcode">REFERRAL CODE</string>
    <string name="verifyNo">Verify Number</string>
    <string name="enterOtp">please enter six digits otp.</string>
    <string name="clickHere">Click here to </string>
    <string name="save">Save</string>
    <string name="uploadIdentity">UPLOAD IDENTITY</string>
    <string name="uploadIdentityAndMMJCard">Upload your identity &amp; Medical card</string>
    <string name="skip">Skip</string>
    <string name="identityCard">Identity Card</string>
    <string name="uploadAnyGovernmentCard">Upload any government issued\nidentity card</string>
    <string name="mmjCard">MEDICAL CARD</string>
    <string name="uploadMMjCard">Upload your Medical card</string>
    <string name="dontHaveMMJcard">Don\'t have a Medical card? </string>
    <string name="getOne">Get one</string>
    <string name="uploaded">Uploaded</string>
    <string name="uploadedSuccess">Updated successfully</string>
    <string name="thankyou">Thank you for submitting the document, our account verification team will validate the document and will send notification when verification compleated</string>
    <string name="verificationCode">VERIFICATION CODE</string>
    <string name="didntGetCode">Didn\'t get code?</string>
    <string name="resend">Resend</string>
    <string name="invite">Invite</string>
    <string name="verifyAndProceed">VERIFY OTP</string>
    <string name="enterMobileAndEmailAddress">Enter your Mobile Number /  Email address and you will get verification code /  link to reset password</string>
    <string name="phoneNumber">Phone</string>
    <string name="verify_code_sent">Verification code sent to</string>
    <string name="or">OR</string>
    <string name="next">NEXT</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="selectCountry">Select Country</string>
    <string name="typeCountry">Type Country</string>
    <string name="done">Done</string>
    <string name="createNewList">Create new list </string>
    <string name="confirm">Confirm</string>
    <string name="enterNameForList">Enter a name for your list</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="mobileNumberVerified">Mobile Number Verified Enter Your new Password</string>
    <string name="yourNewPassword">YOUR NEW PASSWORD</string>
    <string name="reEnterPassword">RE-ENTER PASSWORD </string>
    <string name="update">UPDATE</string>
    <string name="replaceItem">Replace cart item?</string>
    <string name="singleCart">Your cart contains items from a different store. Would you like to reset your cart before browsing this store? </string>
    <string name="validThru">Valid\nThru</string>
    <string name="faqs">FAQs</string>
    <string name="language">Language</string>
    <string name="helpCenter">Help center</string>
    <string name="referFriends">Refer your friends</string>
    <string name="apply">Apply</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tvFilterTitle">Color</string>
    <string name="orderType">Order type</string>
    <string name="timeFilter">Time filter</string>
    <string name="orders">All Orders</string>
    <string name="loginForgotPasswordPhone">Phone</string>
    <string name="loginForgotPasswordEmail">Email</string>
    <string name="loginResetPasswordText">Reset Password</string>
    <string name="loginResetPasswordDescription">Choose a method to reset your password</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="openOrders">Open orders</string>
    <string name="compltedOrders">Completed orders</string>
    <string name="cancelledOrders">Cancelled orders</string>
</resources>