<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    tools:context=".customer.fivecanale.historyfilter.HistoryOrderFilterActivity">
    <data>

        <variable
            name="viewModel"
            type="com.customer.fivecanale.historyfilter.HistoryOrderFilterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/incHeader"
            layout="@layout/layout_back_arrow_btn_header"
            bind:listener="@{viewModel}"
            />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvFilter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFilterApply"
            app:layout_constraintTop_toBottomOf="@+id/incHeader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOrderType"
                    style="@style/Text.18sp.Nero.PoppinsBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:includeFontPadding="false"
                    android:text="@string/orderType"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rbOrderType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderType">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbOrders"
                        style="@style/Text.13sp.Nero.PoppinsRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_marginStart="@dimen/twenty_dp"
                        android:layout_marginEnd="@dimen/twenty_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:text="@string/orders" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbOpenOrders"
                        style="@style/Text.13sp.Nero.PoppinsRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:layout_marginStart="@dimen/twenty_dp"
                        android:layout_marginEnd="@dimen/twenty_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:text="@string/openOrders" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbCompletedOrders"
                        style="@style/Text.13sp.Nero.PoppinsRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:layout_marginStart="@dimen/twenty_dp"
                        android:layout_marginEnd="@dimen/twenty_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:text="@string/compltedOrders" />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbCancelledOrders"
                        style="@style/Text.13sp.Nero.PoppinsRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:layout_marginStart="@dimen/twenty_dp"
                        android:layout_marginEnd="@dimen/twenty_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:text="@string/cancelledOrders" />
                </RadioGroup>
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/two_dp"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:background="@drawable/shadow_below"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rbOrderType" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTimeFilter"
                    style="@style/Text.18sp.Nero.PoppinsBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:includeFontPadding="false"
                    android:text="@string/timeFilter"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOrderType"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero_dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tvTimeFilter" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFilterApply"
            style="@style/Text.12sp.White.PoppinsSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:background="@drawable/app_color_rect_ripple_effect"
            android:paddingStart="@dimen/fifty_dp"
            android:paddingEnd="@dimen/fifty_dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>