<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/ten_dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/white_bag"
    android:paddingLeft="@dimen/twenty_dp"
    android:paddingStart="@dimen/twenty_dp"
    android:paddingEnd="@dimen/twenty_dp"
    android:paddingRight="@dimen/twenty_dp"
    android:layout_height="wrap_content">

    <TextView
        android:fontFamily="@font/muli_bold"
        android:id="@+id/tv_header"
        android:textSize="@dimen/sixteen_dp"
        android:textColor="@color/colorCharade"
        android:text="@string/replace_cart"
        android:layout_marginTop="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@font/muli_regular"
        android:id="@+id/tv_message"
        android:layout_marginTop="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="@dimen/five_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:fontFamily="@font/muli_bold"
        android:id="@+id/tv_ok"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/twenty_dp"
        app:layout_constraintEnd_toStartOf="@id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        android:textSize="@dimen/fourteen_sp"
        android:textColor="@color/colorAccent"
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="@dimen/five_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:fontFamily="@font/muli_bold"
        android:id="@+id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        android:textSize="@dimen/fourteen_sp"
        android:textColor="@color/colorAccent"
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>